@@ -17,13 +17,8 @@ then
 		export pg_hba_dir=/etc/postgresql/${pg_version}/main
 	else
 		echo "No database found online on port 5432"
-		echo "Couldn't initialize or upgrade @OLDPACKAGE@ database."
-		echo "Please see postgresql documentation"
-		echo "and run dpkg-reconfigure -plow @OLDPACKAGE@-db-postgresql"
-		echo "once the problem is solved"
-		echo "exiting without error, but @OLDPACKAGE@ db will not work"
-		echo "right now"
-		exit 0
+		echo "Couldn't initialize or upgrade @OLDPACKAGE@ database"
+		exit 1
 	fi
 else
     	export pg_hba_dir=/etc/postgresql
